[package]
name = "leafwing_terminal"
version = "0.2.5"
edition = "2021"
authors = ["Alice I. Cecile<alice@leafwing-studios.com>", "Rose Peck<rose@leafwing-studios.com>"]
homepage = "https://leafwing-studios.com"
repository = "https://github.com/Leafwing-Studios/leafwing_terminal/"
description = "A virtual terminal for Bevy games"
license = "MIT"
readme = "README.md"

[dependencies]
bevy = { version = "0.7", default-features = false }
leafwing_terminal_derive = { path = "./leafwing_terminal_derive" }
leafwing_terminal_parser = { path = "./leafwing_terminal_parser" }
bevy_egui = "0.14"

[dev-dependencies]
bevy = "0.7"

[workspace]
members = ["leafwing_terminal_derive", "leafwing_terminal_parser"]

[patch.crates-io]
# Use for local development
leafwing_terminal_derive = {path = "./leafwing_terminal_derive"}
leafwing_terminal_parser = {path = "./leafwing_terminal_parser"}


