[package]
name = "leafwing_terminal_derive"
version = "0.2.4"
edition = "2021"
authors = ["Alice I. Cecile<alice@leafwing-studios.com>", "Rose Peck<rose@leafwing-studios.com>"]
homepage = "https://leafwing-studios.com"
repository = "https://github.com/Leafwing-Studios/leafwing_terminal/"
description = "derive macros for leafwing_terminal"
license = "MIT"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
better-bae = "0.1.8"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
